Interfaz de Login

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#323031</color>
+    <color name="colorPrimaryDark">#661923</color>
+    <color name="colorAccent">#7F7979</color>
+    <color name="colorLight">#FDF9FF</color>
 </resources>
