--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,6 +16,7 @@
 
         <ProgressBar
                 android:id="@+id/progressbarLogin"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:outlineSpotShadowColor="@color/colorPrimaryDark"
                 android:outlineAmbientShadowColor="@color/colorPrimaryDark"
@@ -26,7 +27,6 @@
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="35dp"
             android:weightSum="1"
             android:orientation="vertical">
 
@@ -39,10 +39,10 @@
                 android:layout_height="match_parent">
 
             <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:layout_height="150dp"
                     android:layout_centerInParent="true"
-                    android:background="@drawable/ceez_logo"/>
+                    android:background="@drawable/ceez"/>
 
         </RelativeLayout>
 
@@ -71,7 +71,6 @@
                             android:id="@+id/loginUsername"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="10dp"
                             android:hint="@string/hint_username"
                             android:textColorHint="@color/colorPrimaryDark"
 
@@ -91,14 +90,11 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:hint="@string/hint_password"
-                            android:layout_marginTop="10dp"
+                            android:layout_marginTop="20dp"
                             android:inputType="textPassword"
                             app:passwordToggleEnabled="true"
-
                             android:textColorHint="@color/colorPrimaryDark"
-
                     />
-
 
                 </android.support.design.widget.TextInputLayout>
 
