--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,8 +18,7 @@
                 android:id="@+id/progressbarLogin"
                 android:visibility="gone"
                 android:layout_width="match_parent"
-                android:outlineSpotShadowColor="@color/colorPrimaryDark"
-                android:outlineAmbientShadowColor="@color/colorPrimaryDark"
+                android:indeterminateTint="@color/colorPrimaryDark"
                 android:layout_height="wrap_content"/>
 
     </RelativeLayout>
@@ -57,7 +56,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:paddingTop="30dp"
+                    android:paddingTop="15dp"
                     android:paddingEnd="70dp"
                     android:paddingStart="70dp">
 
@@ -83,7 +82,8 @@
                 <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-
+                        app:passwordToggleEnabled="true"
+                        app:passwordToggleTint="@color/colorAccent"
                 >
                     <android.support.design.widget.TextInputEditText
                             android:id="@+id/loginPassword"
@@ -92,7 +92,6 @@
                             android:hint="@string/hint_password"
                             android:layout_marginTop="20dp"
                             android:inputType="textPassword"
-                            app:passwordToggleEnabled="true"
                             android:textColorHint="@color/colorPrimaryDark"
                     />
 
